Added logic to limit registrations by email. Fixed tests. Fixed logic for no contact creation

--- a/force-app/main/default/staticresources/SummitEventsAssets/css/main.css
+++ b/force-app/main/default/staticresources/SummitEventsAssets/css/main.css
@@ -3,10 +3,10 @@
 .slds-has-error {border-color:red!important;}
 
 
-.validationError {
+.validationError, ul[role=alert] li {
     color: red !important;
 }
-
+ul[role=alert] li { font-weight:bold}
 .validationError input {
     border: 1px solid red;
 }
