--- a/force-app/main/default/pages/SummitEventsSubmit.page
+++ b/force-app/main/default/pages/SummitEventsSubmit.page
@@ -5,14 +5,18 @@ license that can be found in the LICENSE file.
 Created by Thaddaeus Dahlberg on 5/1/2018.
 -->
 
-<apex:page id="SummitEventsSubmit" showHeader="false" sidebar="false" applyHtmlTag="false" applyBodyTag="false" standardStylesheets="false" docType="html-5.0" cache="false" controller="SummitEventsSubmitController" action="{!checkEventDetails}">
+<apex:page id="SummitEventsSubmit" showHeader="false" sidebar="false" applyHtmlTag="false" applyBodyTag="false"
+           standardStylesheets="false" docType="html-5.0" cache="false" controller="SummitEventsSubmitController"
+           action="{!checkEventDetails}">
     <apex:composition template="{!templateSelected}">
         <apex:define name="metaPageTitle">
             {!eventPage.Event_Name__c}
-            <apex:outputText rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}" value="{! ' - ' + evtInstance.Instance_Title__c}"/>
+            <apex:outputText rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}"
+                             value="{! ' - ' + evtInstance.Instance_Title__c}"/>
             - Submit
         </apex:define>
-        <apex:define name="pageTitle"><a href="{!eventPage.Event_Home_Link_URL__c}">{!eventPage.Event_Home_Link_Title__c}</a></apex:define>
+        <apex:define name="pageTitle"><a
+                    href="{!eventPage.Event_Home_Link_URL__c}">{!eventPage.Event_Home_Link_Title__c}</a></apex:define>
         <apex:define name="scriptsHead">
             <link href="{!URLFOR($Resource.SummitEventsAssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
         </apex:define>
@@ -20,37 +24,64 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages />
+                    <apex:messages/>
                     <apex:outputText escape="false" value="{!headers}"></apex:outputText>
                 </div>
-                <apex:form id="SummitEventsRegisterSubmitForm" styleClass="slds-grid slds-wrap">
 
-                    <!-- EVENT BREADCRUMB -->
+                <!-- EVENT BREADCRUMB -->
+                <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
+                    <apex:outputText escape="false" value="{!navBreadCrumb}"/>
+                </div>
+
+                <apex:outputPanel layout="block" rendered="{!successReturnFromGateway}" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1">
+                    <script>fadeout();</script>
+                    <h2 class="slds-text-heading_large slds-p-vertical_xx-small">Please hold on...</h2>
+                    <p class="slds-text-body slds-p-vertical_xx-small">As we process your payment.</p>
+                </apex:outputPanel>
+
+                <apex:outputPanel layout=" block" rendered="{!!successReturnFromGateway}" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1">
+                    <h2 class="slds-text-heading_large slds-p-vertical_xx-small">
+                        <apex:outputText escape="false" value="{!eventPage.Event_Submit_Title__c}"/>
+                    </h2>
+                    <p class="slds-text-body slds-p-vertical_xx-small">
+                        <apex:outputText escape=" false" value="{!eventPage.Event_Submit_Description__c}"/>
+                    </p>
+                    <apex:outputText escape="false" value="{!chosenFormatted}"/>
+                </apex:outputPanel>
+
+                <apex:outputPanel layout="block" rendered="{!showPaymentButton}" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1">
+                    <h3 class="slds-text-heading_medium slds-p-vertical_xx-small">Event Cost</h3>
+                    <apex:outputText escape="false" value="{!paymentItemized}"/>
+                </apex:outputPanel>
+
+                <apex:form id="USTRegistraterSubmitForm" html-data-abide="ajax" html-novalidate="novalidate" rendered="{!!showPaymentButton}" styleClass="slds-grid slds-wrap">
                     <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                        <apex:outputText escape="false" value="{!navBreadCrumb}"/>
-                    </div>
-
-                    <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                        <h2 class="slds-text-heading_large slds-p-vertical_xx-small">
-                            <apex:outputText escape="false" value="{!eventPage.Event_Submit_Title__c}"/>
-                        </h2>
                         <p class="slds-text-body slds-p-vertical_xx-small">
-                            <apex:outputText escape="false" value="{!eventPage.Event_Submit_Description__c}"/>
-                        </p>
-                        <apex:outputText escape="false" value="{!chosenFormatted}"/>
-                    </div>
-                    <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
-                        <p class="slds-text-body slds-p-vertical_xx-small">
-                            <apex:commandLink action="{!submitRegistration}" onClick="fadeout();" Value="Submit Registration" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
-                            <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
-                        </p>
-                    </div>
-                    <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
-                        <p class="slds-text-body ">
-                            <apex:outputText escape="false" value="{!EventPage.Event_Footer__c}"></apex:outputText>
+                            <apex:commandLink action="{!submitDonation}" onClick="fadeout();" Value="Submit Registration" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
+                        <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
                         </p>
                     </div>
                 </apex:form>
+
+                <!-- Payment Gateway if needed-->
+
+                <form id="upayForm" action="{!upayURL}" method="post" rendered="{!showPaymentButton && totalPaymentAmount != null && totalPaymentAmount > 0}" styleClass="slds-grid slds-wrap">
+                    <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
+                        <input id="TICKET_NAME" type="hidden" name="TICKET_NAME" value="{!ticketName}"/>
+                        <input id="TICKET" type="hidden" name="TICKET" value="{!ticket}"/>
+                        <input id="UPAY_SITE_ID" type="hidden" name="UPAY_SITE_ID" value="{!upayId}"/>
+                        <a href="javascript:;" onclick="fadeout(); document.getElementById('upayForm').submit();" class="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small">Submit and Pay</a>
+                        <a href="{!previousPageURL}" onclick="fadeout();" class="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small">Previous</a>
+                    </div>
+                </form>
+
+
+                <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
+                    <p class="slds-text-body slds-p-vertical_xx-small">
+                        <apex:outputText escape="false" value="{!EventPage.Event_Footer__c}"></apex:outputText>
+                    </p>
+                </div>
+
                 <apex:outputText escape="false" value="{!eventPage.Tracking_Submit_Registration__c}"></apex:outputText>
             </div>
         </apex:define>
