--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -30,7 +30,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages />
+                    <apex:messages/>
                 </div>
 
                 <apex:form id="SummitEventRegisterForm" styleClass="slds-grid slds-wrap">
@@ -68,8 +68,55 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
                         <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
                             <apex:outputText escape="false" value="{!eventPage.Event_description__c}"></apex:outputText>
-                            <apex:outputText escape="false" value="{!locationCrumb}" rendered="{!IF(!ISBLANK(locationCrumb), true, false)}"/>
                         </div>
+
+                        <!-- Location Inforamation -->
+                        <apex:outputPanel layout="block" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1" rendered="{!showLocation}">
+                            <h4 class="slds-text-heading_medium slds-p-vertical_xx-small">Event Details</h4>
+                            <!-- Location Title -->
+                            <apex:outputPanel layout="none" rendered="{!IF(!ISBLANK(eventPage.Location_Title__c) || !ISBLANK(evtInstance.Location_Title_Override__c), true, false)}">
+                                <p class="slds-text-body_large slds-p-vertical_xx-small">
+                                    <apex:outputText escape="false" value="{!IF(!ISBLANK(evtInstance.Location_Title_Override__c), evtInstance.Location_Title_Override__c, eventPage.Location_Title__c)}"/>
+                                </p>
+                            </apex:outputPanel>
+                            <!-- Location Date/Time -->
+                            <p class="slds-text-body">
+                                <apex:outputText value="{0,date,EEEE MMMM dd, YYYY}">
+                                    <apex:param value="{!evtInstance.Instance_Start_Date__c}"/>
+                                </apex:outputText>
+                            </p>
+                            <p class="slds-text-body">
+                                {!startTimeString} - {!endTimeString}
+                            </p>
+                            <!-- Location Address/Map Link -->
+                            <apex:outputPanel layout="none"
+                                              rendered="{!IF(!ISBLANK(eventPage.Location_Address__c)
+                                              || !ISBLANK(evtInstance.Location_Address_Override__c)
+                                              || !ISBLANK(eventPage.Location_Map_Link__c)
+                                              || !ISBLANK(evtInstance.Location_Map_Link_Override__c)
+                                              , true, false)}">
+                                <p class="slds-text-body_large slds-p-vertical_xx-small">
+
+                                    <!-- Start of Map link if it exists. Override first than regular if blank-->
+                                    <apex:outputText escape="false" rendered="{!If(!ISBLANK(evtInstance.Location_Map_Link_Override__c), true,false)}" value="<a href={0} target=_blank>">
+                                        <apex:param value="{!evtInstance.Location_Map_Link_Override__c}"/>
+                                    </apex:outputText>
+                                    <apex:outputText escape="false" rendered="{!If(!ISBLANK(eventPage.Location_Map_Link__c) && ISBLANK(evtInstance.Location_Map_Link_Override__c),true, false)}" value="<a href={0} target=_blank>">
+                                        <apex:param value="{!eventPage.Location_Map_Link__c}"/>
+                                    </apex:outputText>
+
+                                    <!-- Location Address shows as address if available or Map if no address given but map link -->
+                                    <apex:outputText escape="false" rendered="{!If(!ISBLANK(evtInstance.Location_Address_Override__c), true,false)}" value="{!evtInstance.Location_Address_Override__c}>"/>
+                                    <apex:outputText escape="false" rendered="{!If(!ISBLANK(eventPage.Location_Address__c) && ISBLANK(evtInstance.Location_Address_Override__c),true, false)}" value="{!eventPage.Location_Address__c}"/>
+                                    <apex:outputText escape="false" rendered="{!If((ISBLANK(eventPage.Location_Address__c) && ISBLANK(evtInstance.Location_Address_Override__c)) && (!ISBLANK(eventPage.Location_Map_Link__c) || !ISBLANK(evtInstance.Location_Map_Link_Override__c)),true, false)}" value="Map"/>
+
+                                    <!-- End of Map link if it exists -->
+                                    <apex:outputText escape="false" rendered="{!If(!ISBLANK(eventPage.Location_Map_Link__c) || !ISBLANK(evtInstance.Location_Map_Link_Override__c), true, false)}" value="</a>"/>
+                                </p>
+                            </apex:outputPanel>
+
+                        </apex:outputPanel>
+
 
                         <!-- LOGGED IN TO PORTAL MESSAGE -->
                         <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
@@ -752,7 +799,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                             <div class="slds-form-element__control">
 
                                                 <!--Text area -->
-                                                <apex:outputPanel layout="none" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'], 'Text area'), true, false)}" >
+                                                <apex:outputPanel layout="none" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'], 'Text area'), true, false)}">
                                                     <div class="slds-form-element__control">
                                                         <apex:inputTextarea label="{!'AddInfo' + q}" value="{!newEvtReg['Add_Info_Answer_' + q + '__c']}" required="true" styleClass="slds-input" rendered="{!isRequired}"/>
                                                         <apex:inputTextarea label="{!'AddInfo' + q}" value="{!newEvtReg['Add_Info_Answer_' + q + '__c']}" styleClass="slds-input" rendered="{!!isRequired}"/>
