removed instance date/time fields. Cleaned up date fields on registration. removed some UST only type fields

--- a/force-app/main/default/pages/SummitEventsAddToCalendar.page
+++ b/force-app/main/default/pages/SummitEventsAddToCalendar.page
@@ -8,15 +8,21 @@ Created by Thaddaeus Dahlberg on 11/12/2018.
 <apex:page id="SummitEventsAddToCalendar" title="event.ics" contentType="text/calendar" cache="false" controller="SummitEventsAddToCalendarController">
 BEGIN:VCALENDAR
 VERSION:2.0
-METHOD:PUBLISH
 CALSCALE:GREGORIAN
 BEGIN:VEVENT
-DTSTART;TZID=America/Chicago:{!DTSTART}
-DTEND;TZID=America/Chicago:{!DTEND}
-DTSTAMP:{!DTSTAMP}
 SUMMARY:{!SUMMARY}
-DESCRIPTION:{!DESCRIPTION}
+DTSTART;TZID={!TIMEZONE}:{!DTSTART}
+DTEND;TZID={!TIMEZONE}:{!DTEND}
 LOCATION: Summit Events
+DESCRIPTION:{!DESCRIPTION}
+STATUS:CONFIRMED
+METHOD:PUBLISH
+DTSTAMP:{!DTSTAMP}
+BEGIN:VALARM
+TRIGGER:-PT10M
+DESCRIPTION:{!SUMMARY}
+ACTION:DISPLAY
+END:VALARM
 UID:{!UUID}
 END:VEVENT
 END:VCALENDAR
