--- a/force-app/main/default/pages/SummitEventsConfirmation.page
+++ b/force-app/main/default/pages/SummitEventsConfirmation.page
@@ -19,12 +19,12 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                 dataLayer = [{
                     <!--'school': '{!eventPage.School__r.Name}',-->
                     'eventlabel': '{!eventPage.Event_Name__c}'
-                    //'startDate': '{!evtInstance.Start_Date_Time__c}',
+                    //'startDate': '{!evtInstance.Instance_Start_Date__c}',
                     // 'location':'{}'
                 }];
             </script>
 
-            <link href="{!URLFOR($Resource.SummitEventsAssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
+            <link href="{!URLFOR($Resource.SummitEventssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
         </apex:define>
         <apex:define name="sectionNav"/>
         <apex:define name="body">
