--- a/force-app/main/default/pages/SummitEventsConfirmation.page
+++ b/force-app/main/default/pages/SummitEventsConfirmation.page
@@ -24,7 +24,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                 }];
             </script>
 
-            <link href="{!URLFOR($Resource.SummitEventssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
+            <link href="{!URLFOR($Resource.SummitEventsAssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
         </apex:define>
         <apex:define name="sectionNav"/>
         <apex:define name="body">
