* Updated Global Value Sets to remove St. Thomas specific items - Made more generic - Deleted values * Updated Status and Substatus values to be more generic event. Inactivated values * Updated SummitEventsConfirmationController so when registrant submits, it moves to "Registered" rather than "Requested" * Remove the "Ask Parent" on Event Page layout.

--- a/force-app/main/default/layouts/Summit_Events__c-Summit Event Default Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events__c-Summit Event Default Layout.layout-meta.xml
@@ -96,10 +96,6 @@
         <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Ask_If_Parent__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
                 <field>Ask_Mailing_Address__c</field>
             </layoutItems>
             <layoutItems>
@@ -542,7 +538,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hR0000001ddxE</masterLabel>
+        <masterLabel>00h0U000001KZQL</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
