--- a/force-app/main/default/pages/SummitEventsSubmit.page
+++ b/force-app/main/default/pages/SummitEventsSubmit.page
@@ -64,16 +64,17 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                 </apex:form>
 
                 <!-- Payment Gateway if needed-->
-
-                <form id="upayForm" action="{!upayURL}" method="post" rendered="{!showPaymentButton && totalPaymentAmount != null && totalPaymentAmount > 0}" styleClass="slds-grid slds-wrap">
-                    <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                        <input id="TICKET_NAME" type="hidden" name="TICKET_NAME" value="{!ticketName}"/>
-                        <input id="TICKET" type="hidden" name="TICKET" value="{!ticket}"/>
-                        <input id="UPAY_SITE_ID" type="hidden" name="UPAY_SITE_ID" value="{!upayId}"/>
-                        <a href="javascript:;" onclick="fadeout(); document.getElementById('upayForm').submit();" class="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small">Submit and Pay</a>
-                        <a href="{!previousPageURL}" onclick="fadeout();" class="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small">Previous</a>
-                    </div>
-                </form>
+                <apex:outputPanel layout="block" rendered="{!showPaymentButton && totalPaymentAmount != null && totalPaymentAmount > 0}" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1">
+                    <form id="upayForm" action="{!upayURL}" method="post"  styleClass="slds-grid slds-wrap">
+                        <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
+                            <apex:repeat var="field" value="{!upayFormFields.keySet()}">
+                                <input id={!field} type="hidden" name="{!field}" value="{!upayFormFields.get(field)}"/>
+                            </apex:repeat>
+                            <a href="javascript:;" onclick="fadeout(); document.getElementById('upayForm').submit();" class="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small">Submit and Pay</a>
+                            <a href="{!previousPageURL}" onclick="fadeout();" class="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small">Previous</a>
+                        </div>
+                    </form>
+                </apex:outputPanel>
 
 
                 <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
