Adds uPay payment proof of concept. Confirmation page is blank. Test uPay environment firewall blocks postback, requires contacting support, getting approval.

--- a/force-app/main/default/pages/SummitEvents.page
+++ b/force-app/main/default/pages/SummitEvents.page
@@ -41,4 +41,5 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
             </div>
         </apex:define>
     </apex:composition>
+    <site:previewAsAdmin/>
 </apex:page>
