--- a/force-app/main/default/pages/SummitEventsConfirmation.page
+++ b/force-app/main/default/pages/SummitEventsConfirmation.page
@@ -54,4 +54,5 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
             <apex:outputText escape="false" value="{!eventPage.Tracking_Confirmation_Registration__c}"></apex:outputText>
         </apex:define>
     </apex:composition>
+    <site:previewAsAdmin/>
 </apex:page>
