--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -530,7 +530,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                         </apex:outputText>
                                     </apex:outputLabel>
                                     <div class="slds-form-element__control">
-                                        <apex:inputText value="{!newEvtReg.Registrant_Street_1__c}" id="street" required="true" styleClass="slds-input" disabled="{!contactSet}" maxLength="95"/>
+                                        <apex:inputText value="{!newEvtReg.Registrant_Street_1__c}" id="street" required="{!IF(CONTAINS(eventPage.Ask_Mailing_Address__c, 'require'),true,false)}" styleClass="slds-input" disabled="{!contactSet}" maxLength="95"/>
                                     </div>
                                 </div>
                             </div>
